# 3d

./: Cargo.toml  build.rs  rustfmt.toml  todo.txt
shaders/: fragment_tex.glsl  vertex.glsl  vertex_tex.glsl
src/: main.rs
src/app/: mod.rs  renderer.rs
src/app/renderer/: gl.rs  mod.rs  program.rs  shader.rs  texture.rs  vertex_array_objects.rs  vertex_buffer_objects.rs
src/app/shaders/: fragment.glsl  vertex.glsl
