[package]
name = "threed"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[featured]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
anyhow = "1.0.91"
env = "0.1.0"
env_logger = "0.11.5"
glutin = "0.32.1"
glutin-winit = "0.5.0"
image = "0.25.4"
log = "0.4.22"
nalgebra = "0.31.0"
nalgebra-glm = "0.19.0"
raw-window-handle = "0.6.2"
winit = "0.30.5"


[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.1"
